@@ -73,6 +73,7 @@ export(isSuperset)
 export(isUnix)
 export(isValidName)
 export(isWindows)
+export(itostr)
 export(lib)
 export(listToShortString)
 export(load2)
